[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "circlify>=0.15.1",
    "fastapi[all]>=0.128.8",
    "langchain>=1.2.10",
    "langchain-openai>=1.1.9",
    "matplotlib<3.9.0",
    "numpy<2",
    "openpyxl>=3.1.5",
    "pandas<2.2.0",
    "plotly<6",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.46",
    "streamlit>=1.19.0",
    "uvicorn>=0.40.0",
    "vl-convert-python>=1.9.0.post1",
]
